// Copyright 2026 Peter Edge
//
// All rights reserved.

syntax = "proto3";

package ibctl.data.v1;

import "buf/validate/validate.proto";
import "standard/time/v1/date.proto";

// ExchangeRate represents a currency exchange rate for a given date.
message ExchangeRate {
  // The date of the exchange rate.
  standard.time.v1.Date date = 1 [(buf.validate.field).required = true];
  // The base currency code (e.g., "USD").
  string base_currency_code = 2 [(buf.validate.field).string.pattern = "^[A-Z]{3}$"];
  // The quote currency code (e.g., "CAD").
  string quote_currency_code = 3 [(buf.validate.field).string.pattern = "^[A-Z]{3}$"];
  // The whole units of the exchange rate (e.g., 1 for a rate of 1.3456).
  int64 rate_units = 4;
  // The micro units of the exchange rate (e.g., 345600 for a rate of 1.3456).
  // Must be between -999999 and 999999. Sign must match rate_units.
  int64 rate_micros = 5 [
    (buf.validate.field).int64.gte = -999999,
    (buf.validate.field).int64.lte = 999999
  ];
  // The source of the exchange rate data (e.g., "ibkr", "frankfurter").
  string provider = 6 [(buf.validate.field).required = true];
}
