// Copyright 2026 Peter Edge
//
// All rights reserved.

syntax = "proto3";

package ibctl.exchangerate.v1;

import "standard/time/v1/date.proto";

// ExchangeRate represents a currency exchange rate for a given date.
message ExchangeRate {
  // The date of the exchange rate.
  standard.time.v1.Date date = 1;
  // The base currency code (e.g., "USD").
  string base_currency = 2;
  // The quote currency code (e.g., "CAD").
  string quote_currency = 3;
  // The exchange rate as a decimal string (e.g., "1.3456").
  string rate = 4;
}

// ExchangeRates wraps a list of exchange rates for top-level JSON serialization.
message ExchangeRates {
  // The list of exchange rates.
  repeated ExchangeRate exchange_rates = 1;
}
