// Copyright 2026 Peter Edge
//
// All rights reserved.

syntax = "proto3";

package ibctl.metadata.v1;

// Metadata stores information about the most recent data download.
message Metadata {
  // The timestamp of the download in RFC3339 format.
  string download_time = 1;
  // Whether the computed positions matched the IBKR-reported positions.
  bool positions_verified = 2;
  // Descriptions of any discrepancies found during verification.
  repeated string verification_notes = 3;
}
