// Copyright 2026 Peter Edge
//
// All rights reserved.

syntax = "proto3";

package ibctl.taxlot.v1;

import "standard/money/v1/money.proto";
import "standard/time/v1/date.proto";

// TaxLot represents a single open tax lot computed via FIFO.
message TaxLot {
  // The ticker symbol.
  string symbol = 1;
  // The date the lot was opened (trade date of the buy).
  standard.time.v1.Date open_date = 2;
  // The number of shares remaining in this lot.
  int64 quantity = 3;
  // The cost basis price per share.
  standard.money.v1.Money cost_basis_price = 4;
  // The currency code for this tax lot.
  string currency = 5;
  // Whether the holding period is >= 1 year.
  bool long_term = 6;
}

// TaxLots wraps a list of tax lots for top-level JSON serialization.
message TaxLots {
  // The list of tax lots.
  repeated TaxLot tax_lots = 1;
}

// ComputedPosition represents a position derived from tax lots.
message ComputedPosition {
  // The ticker symbol.
  string symbol = 1;
  // The total number of shares across all tax lots.
  int64 quantity = 2;
  // The weighted average cost basis price per share.
  standard.money.v1.Money average_cost_basis_price = 3;
  // The currency code for this position.
  string currency = 4;
}

// ComputedPositions wraps a list of computed positions for top-level JSON serialization.
message ComputedPositions {
  // The list of computed positions.
  repeated ComputedPosition computed_positions = 1;
}
